--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
 		<!-- This script adds the flutter initialization JS code -->
 		<script src="flutter.js" defer></script>
 	</head>
-	<body style="margin: 0 auto; width: 100%; max-width: 430px; border-radius: 10px">
+	<body>
 		<script>
 			window.addEventListener('load', function (ev) {
 				// Download main.dart.js
